clean files, add logo

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="Description" content="Write better. Think better.">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>essais</title>
-    <!-- Font Awesome CDN -->
+    <title>Essais</title>
     <script src="https://kit.fontawesome.com/40e4907d1e.js" defer></script>
-    <!-- API Responsive Voice - Text to Speech-->
-    <!-- <script src='https://code.responsivevoice.org/responsivevoice.js' defer></script> -->
   </head>
   <body id="app-wrapper" data-cy="dom-body">
     <noscript>
@@ -18,7 +15,6 @@
     </noscript>
     <!-- <h1>HELLO WORLD</h1> -->
     <div id="app"></div>
-    <!-- built files will be auto injected -->
     
     
   </body>
